k8s/default/cb/stateful-set-backup.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cb-backup
spec:
  selector:
    matchLabels:
      app: cb-backup
  serviceName: cb-backup
  replicas: 2
  template:
    metadata:
      labels:
        app: cb-backup
    spec:
      containers:
      - name: cb-backup
        image: couchbase:community-7.1.1
        lifecycle:
          postStart:
            exec:
              command: ["sh", "-c", "sleep 30"]
          preStop:
            exec:
              command: ["sh", "-c", "sleep 30"]
        ports:
        - containerPort: 4369
        - containerPort: 8091
        - containerPort: 8092
        - containerPort: 8093
        - containerPort: 8094
        - containerPort: 8095
        - containerPort: 8096
        - containerPort: 8097
        - containerPort: 9100
        - containerPort: 9101
        - containerPort: 9102
        - containerPort: 9103
        - containerPort: 9104
        - containerPort: 9105
        - containerPort: 9110
        - containerPort: 9111
        - containerPort: 9112
        - containerPort: 9113
        - containerPort: 9114
        - containerPort: 9115
        - containerPort: 9116
        - containerPort: 9117
        - containerPort: 9118
        - containerPort: 9120
        - containerPort: 9121
        - containerPort: 9122
        - containerPort: 9130
        - containerPort: 9140
        - containerPort: 9999
        - containerPort: 11207
        - containerPort: 11209
        - containerPort: 11210
        - containerPort: 18091
        - containerPort: 18092
        - containerPort: 18093
        - containerPort: 18094
        - containerPort: 18095
        - containerPort: 18096
        - containerPort: 18097
        - containerPort: 21100
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 4
            memory: 4Gi
        volumeMounts:
        - name: cb-backup
          mountPath: /opt/couchbase/var
  volumeClaimTemplates:
  - metadata:
      name: cb-backup
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 30Gi

---
apiVersion: v1
kind: Service
metadata:
  name: cb-backup
  labels:
    app: cb-backup
spec:
  type: NodePort
  selector:
    app: cb-backup
  ports:
  - port: 8091
    name: "p8091"
  - port: 8092
    name: "p8092"
  - port: 8093
    name: "p8093"
  - port: 8094
    name: "p8094"
  - port: 8095
    name: "p8095"
  - port: 8096
    name: "p8096"
  - port: 8097
    name: "p8097"
  - port: 9140
    name: "p9140"
  - port: 11210
    name: "p11210"
  - port: 11207
    name: "p11207"
  - port: 18091
    name: "p18091"
  - port: 18092
    name: "p18092"
  - port: 18093
    name: "p18093"
  - port: 18094
    name: "p18094"
  - port: 18095
    name: "p18095"
  - port: 18096
    name: "p18096"
  - port: 18097
    name: "p18097"
