k8s/default/cb/stateful-set.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cb
spec:
  selector:
    matchLabels:
      app: cb
  serviceName: cb
  replicas: 3
  template:
    metadata:
      labels:
        app: cb
    spec:
      containers:
      - name: cb
        image: couchbase:community-7.1.1
        lifecycle:
          postStart:
            exec:
              command: ["sh", "-c", "sleep 30"]
          preStop:
            exec:
              command: ["sh", "-c", "sleep 30"]
        ports:
        - containerPort: 4369
        - containerPort: 8091
        - containerPort: 8092
        - containerPort: 8093
        - containerPort: 8094
        - containerPort: 8095
        - containerPort: 8096
        - containerPort: 8097
        - containerPort: 9100
        - containerPort: 9101
        - containerPort: 9102
        - containerPort: 9103
        - containerPort: 9104
        - containerPort: 9105
        - containerPort: 9110
        - containerPort: 9111
        - containerPort: 9112
        - containerPort: 9113
        - containerPort: 9114
        - containerPort: 9115
        - containerPort: 9116
        - containerPort: 9117
        - containerPort: 9118
        - containerPort: 9120
        - containerPort: 9121
        - containerPort: 9122
        - containerPort: 9130
        - containerPort: 9140
        - containerPort: 9999
        - containerPort: 11207
        - containerPort: 11209
        - containerPort: 11210
        - containerPort: 18091
        - containerPort: 18092
        - containerPort: 18093
        - containerPort: 18094
        - containerPort: 18095
        - containerPort: 18096
        - containerPort: 18097
        - containerPort: 21100
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 4
            memory: 4Gi
        volumeMounts:
        - name: cb
          mountPath: /opt/couchbase/var
  volumeClaimTemplates:
  - metadata:
      name: cb
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "microk8s-hostpath"
      resources:
        requests:
          storage: 30Gi

---
apiVersion: v1
kind: Service
metadata:
  name: cb
  labels:
    app: cb
spec:
  type: ClusterIP
  selector:
    app: cb
  ports:
  - port: 4369
    name: "p4369"
  - port: 8091
    name: "p8091"
  - port: 8092
    name: "p8092"
  - port: 8093
    name: "p8093"
  - port: 8094
    name: "p8094"
  - port: 8095
    name: "p8095"
  - port: 8096
    name: "p8096"
  - port: 8097
    name: "p8097"
  - port: 9100
    name: "p9100"
  - port: 9101
    name: "p9101"
  - port: 9102
    name: "p9102"
  - port: 9103
    name: "p9103"
  - port: 9104
    name: "p9104"
  - port: 9105
    name: "p9105"
  - port: 9110
    name: "p9110"
  - port: 9111
    name: "p9111"
  - port: 9112
    name: "p9112"
  - port: 9113
    name: "p9113"
  - port: 9114
    name: "p9114"
  - port: 9115
    name: "p9115"
  - port: 9116
    name: "p9116"
  - port: 9117
    name: "p9117"
  - port: 9118
    name: "p9118"
  - port: 9119
    name: "p9119"
  - port: 9120
    name: "p9120"
  - port: 9121
    name: "p9121"
  - port: 9122
    name: "p9122"
  - port: 9130
    name: "p9130"
  - port: 9140
    name: "p9140"
  - port: 9999
    name: "p9999"
  - port: 11210
    name: "p11210"
  - port: 11207
    name: "p11207"
  - port: 18091
    name: "p18091"
  - port: 18092
    name: "p18092"
  - port: 18093
    name: "p18093"
  - port: 18094
    name: "p18094"
  - port: 18095
    name: "p18095"
  - port: 18096
    name: "p18096"
  - port: 18097
    name: "p18097"
  - port: 21100
    name: "p21100"
