k8s/default/cb/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cb-ingress
  namespace: default
spec:
  hosts: 
  - 'cb.rolancia.com'
  gateways:
  - cb-gateway
  http:
  - match:
    - port: 8091
    route:
    - destination: 
        host: cb
        port:
          number: 8091
